# py-perf-viewer

./: .gitignore  .py-perf.yaml  CLAUDE.md  README-VUE.md  README.md  SYSTEM_MONITORING_INTEGRATION.md  build.sh  capture_screenshots.py  capture_theme_screenshots.py  cleanup_duplicate_hostnames.py  manage.py  package-lock.json  package.json  populate_metadata_lambda.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start-dev.sh  start_viewer.py  test_auto_refresh.html  test_django_server.py  vite.config.js
pyperfweb/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
pyperfweb/dashboard/: api_urls.py  apps.py  constants.py  consumers.py  metadata_service.py  models.py  optimized_system_service.py  registry_service.py  routing.py  services.py  system_models.py  system_services.py  tests.py  urls.py  views.py
pyperfweb/dashboard/management/commands/: process_streams.py
pyperfweb/dashboard/templates/dashboard/: base.html  error.html  function_analysis.html  function_not_found.html  home.html  record_detail.html  record_not_found.html  records.html  system_detail.html  system_overview.html  timeline_not_found.html  timeline_select.html  timeline_viewer.html
pyperfweb/dashboard/templates/spa/: index.html
src/: App.vue  main.js
src/assets/css/: app.css  fontawesome.css
src/components/: CacheDebugger.vue
src/router/: index.js
src/services/: api.js  websocket.js
src/stores/: system.js
src/utils/: cache.js
src/views/: Dashboard.vue  FunctionAnalysis.vue  PerformanceRecords.vue  RecordDetail.vue  SystemDetail.vue  SystemOverview.vue  TimelineViewer.vue
